fixed spacing for media queries

--- a/styles.css
+++ b/styles.css
@@ -39,6 +39,7 @@ button {
 
 @media only screen and (max-width: 750px) {
     body {
+        margin-top: auto;
         text-align: center;
     }
   }
